# agentic-example-app

./: .gitignore  A2A_PROTOCOL.md  IMPLEMENTATION_SUMMARY.md  MCP_TOOLS.md  MOCKED_DATA_EXPLANATION.md  QUICKSTART.md  README.md  test_system.py
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.css  App.jsx
services/mcp-tool-service/: pyproject.toml
services/mcp-tool-service/src/: main.py
services/mcp-tool-service/src/application/tools/: supply_chain_tools.py
services/mcp-tool-service/src/infrastructure/config/: settings.py
services/mcp-tool-service/src/infrastructure/mcp/: registry.py
services/orchestrator/: pyproject.toml
services/orchestrator/src/: main.py
services/orchestrator/src/application/use_cases/: supply_chain_orchestration.py
services/orchestrator/src/domain/models/: supply_chain.py
services/orchestrator/src/domain/services/: compliance_agent.py  logistics_agent.py
services/orchestrator/src/infrastructure/a2a/: discovery.py
services/orchestrator/src/infrastructure/config/: settings.py
services/orchestrator/src/infrastructure/websocket/: manager.py
services/rag-agent/: pyproject.toml
services/rag-agent/src/: main.py
services/rag-agent/src/infrastructure/a2a/: protocol.py
services/rag-agent/src/infrastructure/chromadb/: service.py
services/rag-agent/src/infrastructure/config/: settings.py
